# tkeyclient-py

./: .gitlint  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  client.py  cmd.py  cmds.py  log.py  mkdocs.yml  pyproject.toml
.github/workflows/: test.yml
docs/: index.md  pygments.css
docs/guides/: api.md  proto.md
docs/reference/tkeyclient/: error.md  hw.md  proto.md  tkey.md
tests/tkeyclient/: test_hw.py  test_proto.py  test_tkey.py
tkeyclient/: __init__.py  error.py  hw.py  proto.py  tkey.py
