[project]
name = "tkeyclient"
authors = [
  { name = "Noor Christensen", email = "kchr@technopragmatics.org" },
]
description = "A package for interacting with the Tillitis TKey"
readme = "README.md"
keywords = ["tillitis", "tkey"]
requires-python = ">=3.8"
dependencies = [
    "pyserial"
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    'Operating System :: POSIX',
    'Operating System :: Unix',
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    'Topic :: Software Development',
]

[project.urls]
Homepage = "https://github.com/kchr/tkeyclient-py"
Issues = "https://github.com/kchr/tkeyclient-py/issues"

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tkeyclient"]

[tool.setuptools_scm]
# can be empty if no extra settings are needed, presence enables setuptools_scm

# Configuration for pytest
[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

# Configuration for the ruff linter
[tool.ruff.lint]
# Rules to enable
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    #"I"     # isort
    "D"     # pydocstyle
]

# Rules to ignore
ignore = [
    "E501"  # lines longer than max length
]

# Configuration for the ruff formatter
[tool.ruff.format]

# Use single quotes for strings, except triple-quoted strings.
quote-style = "single"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Per-file ignores for rules
[tool.ruff.lint.per-file-ignores]

# Only include pydocstyle rules for files in package directory
"!tkeyclient/**.py" = ["D"]

# Configuration for pydocstyle rules
[tool.ruff.lint.pydocstyle]

# Use Google-style docstrings
convention = "google"
